--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <div class="card">
     <img class="card-img-top" src="Slide10.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">It's Not Me</h4>
+      <h4 class="card-title">It's is Me</h4>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
